clusters/ion-ol-monitoring/signals/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signals
  labels:
    app.kubernetes.io/component: signals
