clusters/ion-ol-monitoring/signals/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signals
spec:
  selector:
    app: signals
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
