clusters/ion-ol-monitoring/signals/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signals-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - signals.openlibra.space
      secretName: signals-tls
  rules:
    - host: signals.openlibra.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signals
                port:
                  number: 80
